[package]
name = "cdrs"
version = "3.0.0-beta.2"
authors = ["Alex Pikalov <alex.pikalov.khar@gmail.com>"]
edition = "2018"

description = "Cassandra DB driver written in Rust"
documentation = "https://docs.rs/cdrs"
homepage = "https://github.com/AlexPikalov/cdrs"
repository = "https://github.com/AlexPikalov/cdrs"
readme = "./README.md"
keywords = ["cassandra", "driver", "client", "cassandradb", "DB"]
license = "MIT/Apache-2.0"

[features]
default = ["v4"]
ssl = ["tokio-tls", "native-tls"]
v3 = []
v4 = []
# enable v5 feature when it's actually implemented
# v5 = []
e2e-tests = []
# enables dynamic cluster adjustments basing on status
# changes server events
unstable-dynamic-cluster = []

[dependencies]
async-trait = "0.1.36"
byteorder = "1"
fnv = "1.0.7"
log = "0.4.11"
lz4-compress = "=0.1.0"
tokio-tls = { version = "0.3", optional = true }
native-tls = { version = "0.2", optional = true }
bb8 = "0.4"
rand = "0.7.3"
snap = "1.0.1"
time = "0.1.43"
tokio = { version = "0.2.21", features = ["tcp", "io-util", "dns", "sync", "macros"] }
uuid = "0.8.1"

[dev-dependencies]
env_logger = "0.7.1"
maplit = "1.0.2"
regex = "1.3.9"
cdrs_helpers_derive = "0.3.3"

[[example]]
name = "dynamic_cluster"
required-features = ["unstable-dynamic-cluster"]
